src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__generated_files@src__generated__shader_atlas__ray_marching.rs.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/ray_marching.rs
---
// GENERATED FILE (do not edit directly)

//! generated from slang shader: ray_marching.shader.slang

use std::ffi::CString;
use std::io::Cursor;

use ash::util::read_spv;
use ash::vk;
use serde::Serialize;

use crate::renderer::gpu_write::GPUWrite;
#[allow(unused)]
use crate::renderer::vertex_description::{NoVertex, VertexDescription};
use crate::renderer::*;
use crate::shaders::atlas::{PrecompiledShader, PrecompiledShaders, ShaderAtlasEntry};
use crate::shaders::json::{ReflectedPipelineLayout, ReflectionJson};
pub use super::projection::{Projection};
pub use super::ray_march_camera::{RayMarchCamera};

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct RayMarchingParams {
    pub camera: RayMarchCamera,
    pub light_position: glam::Vec3,
    pub sphere_count: u32,
    pub box_count: u32,
    pub _padding_0: [u8; 4],
    pub resolution: glam::Vec2,
    pub spheres: ReadAddr<Sphere>,
    pub boxes: ReadAddr<BoxRect>,
}

impl GPUWrite for RayMarchingParams {}
const _: () = assert!(std::mem::size_of::<RayMarchingParams>() == 128);
const _: () = assert!(std::mem::offset_of!(RayMarchingParams, camera) == 0);
const _: () = assert!(std::mem::size_of::<RayMarchCamera>() == 80);
const _: () = assert!(std::mem::offset_of!(RayMarchingParams, light_position) == 80);
const _: () = assert!(std::mem::size_of::<glam::Vec3>() == 12);
const _: () = assert!(std::mem::offset_of!(RayMarchingParams, sphere_count) == 92);
const _: () = assert!(std::mem::size_of::<u32>() == 4);
const _: () = assert!(std::mem::offset_of!(RayMarchingParams, box_count) == 96);
const _: () = assert!(std::mem::size_of::<u32>() == 4);
const _: () = assert!(std::mem::offset_of!(RayMarchingParams, resolution) == 104);
const _: () = assert!(std::mem::size_of::<glam::Vec2>() == 8);
const _: () = assert!(std::mem::offset_of!(RayMarchingParams, spheres) == 112);
const _: () = assert!(std::mem::size_of::<ReadAddr<Sphere>>() == 8);
const _: () = assert!(std::mem::offset_of!(RayMarchingParams, boxes) == 120);
const _: () = assert!(std::mem::size_of::<ReadAddr<BoxRect>>() == 8);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct BoxRect {
    pub transform: Projection,
    pub radii: glam::Vec3,
    pub _padding_0: [u8; 4],
    pub color: glam::Vec3,
    pub _padding_1: [u8; 4],
}

impl GPUWrite for BoxRect {}
const _: () = assert!(std::mem::size_of::<BoxRect>() == 96);
const _: () = assert!(std::mem::offset_of!(BoxRect, transform) == 0);
const _: () = assert!(std::mem::size_of::<Projection>() == 64);
const _: () = assert!(std::mem::offset_of!(BoxRect, radii) == 64);
const _: () = assert!(std::mem::size_of::<glam::Vec3>() == 12);
const _: () = assert!(std::mem::offset_of!(BoxRect, color) == 80);
const _: () = assert!(std::mem::size_of::<glam::Vec3>() == 12);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct Sphere {
    pub center: glam::Vec3,
    pub radius: f32,
    pub color: glam::Vec3,
    pub _padding_0: [u8; 4],
}

impl GPUWrite for Sphere {}
const _: () = assert!(std::mem::size_of::<Sphere>() == 32);
const _: () = assert!(std::mem::offset_of!(Sphere, center) == 0);
const _: () = assert!(std::mem::size_of::<glam::Vec3>() == 12);
const _: () = assert!(std::mem::offset_of!(Sphere, radius) == 12);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(Sphere, color) == 16);
const _: () = assert!(std::mem::size_of::<glam::Vec3>() == 12);

pub struct Resources<'a> {
    pub params_buffer: &'a UniformBufferHandle<RayMarchingParams>,
}



pub struct Shader {
    pub reflection_json: ReflectionJson,
}

impl Shader {
    pub fn init() -> Self {
        let json_str = include_str!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/ray_marching.json"
        ));

        let reflection_json: ReflectionJson = serde_json::from_str(json_str).unwrap();

        Self { reflection_json }
    }

    pub fn pipeline_config(
        self,
        resources: Resources<'_>,
    ) -> PipelineConfig<'_, NoVertex, DrawVertexCount> {
        // NOTE each of these must be in descriptor set layout order in the reflection json

        #[rustfmt::skip]
        let texture_handles = vec![
        ];

        #[rustfmt::skip]
        let uniform_buffer_handles = vec![
            RawUniformBufferHandle::from_typed(resources.params_buffer),
        ];

        #[rustfmt::skip]
        let storage_texture_handles = vec![
        ];

        let vertex_config = VertexConfig::VertexCount;

        PipelineConfigBuilder {
            shader: Box::new(self),
            vertex_config,
            texture_handles,
            uniform_buffer_handles,
            storage_texture_handles,
            disable_depth_test: false,
        }
        .build()
    }

    fn vert_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .vertex_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn frag_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .fragment_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn vert_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/ray_marching.vert.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }

    fn frag_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/ray_marching.frag.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }
}

impl ShaderAtlasEntry for Shader {
    fn source_file_name(&self) -> &str {
        &self.reflection_json.source_file_name
    }

    fn vertex_binding_descriptions(&self) -> Vec<vk::VertexInputBindingDescription> {
        vec![]
    }

    fn vertex_attribute_descriptions(&self) -> Vec<vk::VertexInputAttributeDescription> {
        vec![]
    }

    fn layout_bindings(&self) -> Vec<Vec<LayoutDescription>> {
        self.reflection_json.layout_bindings()
    }

    fn precompiled_shaders(&self) -> PrecompiledShaders {
        let vert = PrecompiledShader {
            entry_point_name: self.vert_entry_point_name(),
            spv_bytes: self.vert_spv(),
        };

        let frag = PrecompiledShader {
            entry_point_name: self.frag_entry_point_name(),
            spv_bytes: self.frag_spv(),
        };

        PrecompiledShaders { vert, frag }
    }

    fn pipeline_layout(&self) -> &ReflectedPipelineLayout {
        &self.reflection_json.pipeline_layout
    }

    fn reflection_json(&self) -> &ReflectionJson {
        &self.reflection_json
    }
}
