src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__generated_files@src__generated__shader_atlas__space_invaders.rs.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/space_invaders.rs
---
// GENERATED FILE (do not edit directly)

//! generated from slang shader: space_invaders.shader.slang

use std::ffi::CString;
use std::io::Cursor;

use ash::util::read_spv;
use ash::vk;
use serde::Serialize;

pub use super::projection::Projection;
use crate::renderer::gpu_write::GPUWrite;
#[allow(unused)]
use crate::renderer::vertex_description::{NoVertex, VertexDescription};
use crate::renderer::*;
use crate::shaders::atlas::{PrecompiledShader, PrecompiledShaders, ShaderAtlasEntry};
use crate::shaders::json::{ReflectedPipelineLayout, ReflectionJson};

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct SpaceInvadersParams {
    pub projection: Projection,
    pub sprites: ReadAddr<Sprite>,
    pub debug_boxes: ReadAddr<DebugBox>,
}

impl GPUWrite for SpaceInvadersParams {}
const _: () = assert!(std::mem::size_of::<SpaceInvadersParams>() == 80);
const _: () = assert!(std::mem::offset_of!(SpaceInvadersParams, projection) == 0);
const _: () = assert!(std::mem::size_of::<Projection>() == 64);
const _: () = assert!(std::mem::offset_of!(SpaceInvadersParams, sprites) == 64);
const _: () = assert!(std::mem::size_of::<ReadAddr<Sprite>>() == 8);
const _: () = assert!(std::mem::offset_of!(SpaceInvadersParams, debug_boxes) == 72);
const _: () = assert!(std::mem::size_of::<ReadAddr<DebugBox>>() == 8);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct DebugBox {
    pub color: glam::Vec4,
    pub position: glam::Vec2,
    pub size: glam::Vec2,
}

impl GPUWrite for DebugBox {}
const _: () = assert!(std::mem::size_of::<DebugBox>() == 32);
const _: () = assert!(std::mem::offset_of!(DebugBox, color) == 0);
const _: () = assert!(std::mem::size_of::<glam::Vec4>() == 16);
const _: () = assert!(std::mem::offset_of!(DebugBox, position) == 16);
const _: () = assert!(std::mem::size_of::<glam::Vec2>() == 8);
const _: () = assert!(std::mem::offset_of!(DebugBox, size) == 24);
const _: () = assert!(std::mem::size_of::<glam::Vec2>() == 8);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct Sprite {
    pub scale: glam::Vec2,
    pub flags: u32,
    pub debug_box_id: u32,
    pub position: glam::Vec3,
    pub rotation: f32,
    pub tex_u: f32,
    pub tex_v: f32,
    pub tex_w: f32,
    pub tex_h: f32,
    pub color: glam::Vec4,
}

impl GPUWrite for Sprite {}
const _: () = assert!(std::mem::size_of::<Sprite>() == 64);
const _: () = assert!(std::mem::offset_of!(Sprite, scale) == 0);
const _: () = assert!(std::mem::size_of::<glam::Vec2>() == 8);
const _: () = assert!(std::mem::offset_of!(Sprite, flags) == 8);
const _: () = assert!(std::mem::size_of::<u32>() == 4);
const _: () = assert!(std::mem::offset_of!(Sprite, debug_box_id) == 12);
const _: () = assert!(std::mem::size_of::<u32>() == 4);
const _: () = assert!(std::mem::offset_of!(Sprite, position) == 16);
const _: () = assert!(std::mem::size_of::<glam::Vec3>() == 12);
const _: () = assert!(std::mem::offset_of!(Sprite, rotation) == 28);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(Sprite, tex_u) == 32);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(Sprite, tex_v) == 36);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(Sprite, tex_w) == 40);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(Sprite, tex_h) == 44);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(Sprite, color) == 48);
const _: () = assert!(std::mem::size_of::<glam::Vec4>() == 16);

pub struct Resources<'a> {
    pub sprite_sheet: &'a TextureHandle,
    pub params_buffer: &'a UniformBufferHandle<SpaceInvadersParams>,
}

pub struct Shader {
    pub reflection_json: ReflectionJson,
}

impl Shader {
    pub fn init() -> Self {
        let json_str = include_str!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/space_invaders.json"
        ));

        let reflection_json: ReflectionJson = serde_json::from_str(json_str).unwrap();

        Self { reflection_json }
    }

    pub fn pipeline_config(
        self,
        resources: Resources<'_>,
    ) -> PipelineConfig<'_, NoVertex, DrawVertexCount> {
        // NOTE each of these must be in descriptor set layout order in the reflection json

        #[rustfmt::skip]
        let texture_handles = vec![
            resources.sprite_sheet,
        ];

        #[rustfmt::skip]
        let uniform_buffer_handles = vec![
            RawUniformBufferHandle::from_typed(resources.params_buffer),
        ];

        #[rustfmt::skip]
        let storage_texture_handles = vec![
        ];

        PipelineConfigBuilder {
            shader: Box::new(self),
            texture_handles,
            uniform_buffer_handles,
            storage_texture_handles,
            disable_depth_test: false,
        }
        .build_vertex_count()
    }

    fn vert_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .vertex_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn frag_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .fragment_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn vert_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/space_invaders.vert.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }

    fn frag_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/space_invaders.frag.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }
}

impl ShaderAtlasEntry for Shader {
    fn source_file_name(&self) -> &str {
        &self.reflection_json.source_file_name
    }

    fn vertex_binding_descriptions(&self) -> Vec<vk::VertexInputBindingDescription> {
        vec![]
    }

    fn vertex_attribute_descriptions(&self) -> Vec<vk::VertexInputAttributeDescription> {
        vec![]
    }

    fn layout_bindings(&self) -> Vec<Vec<LayoutDescription>> {
        self.reflection_json.layout_bindings()
    }

    fn precompiled_shaders(&self) -> PrecompiledShaders {
        let vert = PrecompiledShader {
            entry_point_name: self.vert_entry_point_name(),
            spv_bytes: self.vert_spv(),
        };

        let frag = PrecompiledShader {
            entry_point_name: self.frag_entry_point_name(),
            spv_bytes: self.frag_spv(),
        };

        PrecompiledShaders { vert, frag }
    }

    fn pipeline_layout(&self) -> &ReflectedPipelineLayout {
        &self.reflection_json.pipeline_layout
    }

    fn reflection_json(&self) -> &ReflectionJson {
        &self.reflection_json
    }
}
